--- a/themes/zengstrom/assets/css/tablet.css
+++ b/themes/zengstrom/assets/css/tablet.css
@@ -1,4 +1,8 @@
-@charset "UTF-8";
+/* 
+Default Styling 
+Original Theme Code
+*/
+
 /* 768 */
 @media (min-width: 661px) and (max-width: 768px){
 /* --- Home Page ---  */
